--- a/MasterThesis_proposal/references.bib
+++ b/MasterThesis_proposal/references.bib
@@ -31,7 +31,6 @@
 	series = {{HPC} {Asia} 2018},
 	title = {{OpenCL}-ready {High} {Speed} {FPGA} {Network} for {Reconfigurable} {High} {Performance} {Computing}},
 	isbn = {978-1-4503-5372-4},
-	url = {http://doi.acm.org/10.1145/3149457.3149479},
 	doi = {10.1145/3149457.3149479},
 	abstract = {Field programmable gate arrays (FPGAs) have gained attention in high-performance computing (HPC) research because their computation and communication capabilities have dramatically improved in recent years as a result of improvements to semiconductor integration technologies that depend on Moore's Law. In addition to FPGA performance improvements, OpenCL-based FPGA development toolchains have been developed and offered by FPGA vendors, which reduces the programming effort required as compared to the past. These improvements reveal the possibilities of realizing a concept to enable on-the-fly offloading computation at which CPUs/GPUs perform poorly to FPGAs while performing low-latency data movement. We think that this concept is one of the keys to more improve the performance of modern heterogeneous supercomputers using accelerators like GPUs. In this paper, we propose high-performance inter-FPGA Ethernet communication using OpenCL and Verilog HDL mixed programming in order to demonstrate the feasibility of realizing this concept. OpenCL is used to program application algorithms and data movement control when Verilog HDL is used to implement low-level components for Ethernet communication. Experimental results using ping-pong programs showed that our proposed approach achieves a latency of 0.99 μs and as much as 4.97 GB/s between FPGAs over different nodes, thus confirming that the proposed method is effective at realizing this concept.},
 	urldate = {2018-10-09},
@@ -134,19 +133,17 @@
 @article{klockner_nodal_2009,
 	title = {Nodal discontinuous {Galerkin} methods on graphics processors},
 	volume = {228},
-	issn = {0021-9991},
-	url = {http://www.sciencedirect.com/science/article/pii/S0021999109003647},
+	issn = {00219991},
 	doi = {10.1016/j.jcp.2009.06.041},
-	abstract = {Discontinuous Galerkin (DG) methods for the numerical solution of partial differential equations have enjoyed considerable success because they are both flexible and robust: They allow arbitrary unstructured geometries and easy control of accuracy without compromising simulation stability. Lately, another property of DG has been growing in importance: The majority of a DG operator is applied in an element-local way, with weak penalty-based element-to-element coupling. The resulting locality in memory access is one of the factors that enables DG to run on off-the-shelf, massively parallel graphics processors (GPUs). In addition, DG’s high-order nature lets it require fewer data points per represented wavelength and hence fewer memory accesses, in exchange for higher arithmetic intensity. Both of these factors work significantly in favor of a GPU implementation of DG. Using a single US\$400 Nvidia GTX 280 GPU, we accelerate a solver for Maxwell’s equations on a general 3D unstructured grid by a factor of around 50 relative to a serial computation on a current-generation CPU. In many cases, our algorithms exhibit full use of the device’s available memory bandwidth. Example computations achieve and surpass 200gigaflops/s of net application-level floating point work. In this article, we describe and derive the techniques used to reach this level of performance. In addition, we present comprehensive data on the accuracy and runtime behavior of the method.},
+	language = {en},
 	number = {21},
 	urldate = {2018-10-19},
 	journal = {Journal of Computational Physics},
-	author = {Klöckner, A. and Warburton, T. and Bridge, J. and Hesthaven, J. S.},
+	author = {Klöckner, A. and Warburton, T. and Bridge, J. and Hesthaven, J.S.},
 	month = nov,
 	year = {2009},
-	keywords = {Discontinuous Galerkin, GPU, High order, Many-core, Maxwell’s equations, Parallel computation},
 	pages = {7863--7882},
-	file = {ScienceDirect Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\TWWMAVJ3\\Klöckner et al. - 2009 - Nodal discontinuous Galerkin methods on graphics p.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\NH87864T\\S0021999109003647.html:text/html}
+	file = {Submitted Version:C\:\\Users\\gaura\\Zotero\\storage\\ZXLLWHUC\\Klöckner et al. - 2009 - Nodal discontinuous Galerkin methods on graphics p.pdf:application/pdf}
 }
 
 @inproceedings{ye_discontinuous_2011,
@@ -166,7 +163,6 @@
 	title = {A high-order discontinuous {Galerkin} method for wave propagation through coupled elastic–acoustic media},
 	volume = {229},
 	issn = {0021-9991},
-	url = {http://www.sciencedirect.com/science/article/pii/S0021999110005024},
 	doi = {10.1016/j.jcp.2010.09.008},
 	abstract = {We introduce a high-order discontinuous Galerkin (dG) scheme for the numerical solution of three-dimensional (3D) wave propagation problems in coupled elastic–acoustic media. A velocity–strain formulation is used, which allows for the solution of the acoustic and elastic wave equations within the same unified framework. Careful attention is directed at the derivation of a numerical flux that preserves high-order accuracy in the presence of material discontinuities, including elastic–acoustic interfaces. Explicit expressions for the 3D upwind numerical flux, derived as an exact solution for the relevant Riemann problem, are provided. The method supports h-non-conforming meshes, which are particularly effective at allowing local adaptation of the mesh size to resolve strong contrasts in the local wavelength, as well as dynamic adaptivity to track solution features. The use of high-order elements controls numerical dispersion, enabling propagation over many wave periods. We prove consistency and stability of the proposed dG scheme. To study the numerical accuracy and convergence of the proposed method, we compare against analytical solutions for wave propagation problems with interfaces, including Rayleigh, Lamb, Scholte, and Stoneley waves as well as plane waves impinging on an elastic–acoustic interface. Spectral rates of convergence are demonstrated for these problems, which include a non-conforming mesh case. Finally, we present scalability results for a parallel implementation of the proposed high-order dG scheme for large-scale seismic wave propagation in a simplified earth model, demonstrating high parallel efficiency for strong scaling to the full size of the Jaguar Cray XT5 supercomputer.},
 	number = {24},
@@ -181,11 +177,15 @@
 }
 
 @unpublished{baggag_parallel_1999,
+	address = {VA United States},
+	type = {Preprint},
 	title = {Parallel {Implementation} of the {Discontinuous} {Galerkin} {Method}},
+	copyright = {No Copyright},
 	url = {https://ntrs.nasa.gov/search.jsp?R=19990100667},
 	abstract = {This paper describes a parallel implementation of the discontinuous Galerkin method. Discontinuous Galerkin is a spatially compact method that retains its accuracy and robustness on non-smooth unstructured grids and is well suited for time dependent simulations. Several parallelization approaches are studied and evaluated. The most natural and symmetric of the approaches has been implemented in all object-oriented code used to simulate aeroacoustic scattering. The parallel implementation is MPI-based and has been tested on various parallel platforms such as the SGI Origin, IBM SP2, and clusters of SGI and Sun workstations. The scalability results presented for the SGI Origin show slightly superlinear speedup on a fixed-size problem due to cache effects.},
+	language = {English},
 	urldate = {2018-10-19},
-	author = {Baggag, AbdalkaderAtkins},
+	author = {Baggag, Abdalkader and Atkins, Harold and Keyes, David},
 	month = aug,
 	year = {1999},
 	keywords = {aeroacoustics, euler equations of motion, galerkin method, linearization, object-oriented programming, robustness, scattering, simulation, time dependence, unstructured grids},
@@ -196,14 +196,17 @@
 
 @inproceedings{collis_discontinuous_2002,
 	title = {Discontinuous {Galerkin} {Methods} for {Turbulence} {Simulation}},
-	url = {https://ntrs.nasa.gov/search.jsp?R=20030020461},
+	copyright = {No Copyright},
 	abstract = {A discontinuous Galerkin  method is formulated, implemented, and tested for simulation of compressible turbulent flows. The method is applied to turbulent channel flow at low Reynolds number, where it is found to successfully predict low-order statistics with fewer degrees of freedom than traditional numerical methods. This reduction is achieved by utilizing local hp-refinement such that the computational grid is refined simultaneously in all three spatial coordinates with decreasing distance from the wall. Another advantage of DG is that Dirichlet boundary conditions can be enforced weakly through integrals of the numerical fluxes. Both for a model advection-diffusion problem and for turbulent channel flow, weak enforcement of wall boundaries is found to improve results at low resolution. Such weak boundary conditions may play a pivotal role in wall modeling for large-eddy simulation.},
-	urldate = {2018-10-19},
+	language = {English},
+	booktitle = {Studying {Turbulence} {Using} {Numerical} {Simulation} {Databases} - {IX}: {Proceedings} of the 2002 {Summer} {Program}},
+	publisher = {Stanford Univ.; Center for Turbulence Research; Stanford, CA United States},
 	author = {Collis, S. Scott},
 	month = dec,
 	year = {2002},
 	keywords = {boundary conditions, channel flow, circular cylinders, computational grids, degrees of freedom, dirichlet problem, discontinuity, galerkin method, low reynolds number, mathematical models, navier-stokes equation, simulation, steady flow, turbulent flow, vortex shedding},
+	pages = {155--167},
 	annote = {Document ID: 20030020461; Subject Category: FLUID MECHANICS AND THERMODYNAMICS; Financial Sponsor: NASA Ames Research Center; Moffett Field, CA United StatesNational Science Foundation; Arlington, VA United StatesTexas Advanced Technology Program; Austin, TX United States; Organization Source: Rice Univ.; Houston, TX United States; Description: 14p; In English},
-	annote = {Publication Information: SEE  parent document record,  "Studying Turbulence Using Numerical Simulation Databases - IX: Proceedings of the 2002 Summer Program"; p. 155-167},
+	annote = {Publication Information: SEE parent document record, "Studying Turbulence Using Numerical Simulation Databases - IX: Proceedings of the 2002 Summer Program"; p. 155-167},
 	file = {NASA NTRS Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\MJ2P3S9V\\Collis - 2002 - Discontinuous Galerkin Methods for Turbulence Simu.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\W888M8UH\\search.html:text/html}
 }
